# imppg

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  README_pl.md  TODO_rgb.md  about.cpp  align.h  align_disc.cpp  align_disc.h  align_params.cpp  align_phasecorr.cpp  align_phasecorr.h  align_proc.cpp  align_progress.cpp  appconfig.cpp  appconfig.h  batch.cpp  batch_params.cpp  bmp.cpp  bmp.h  common.cpp  common.h  config.cmake  config.in  ctrl_ids.h  cursors.cpp  cursors.h  daction.h  fft.cpp  formats.cpp  formats.h  gauss.cpp  image.cpp  image.h  imppg.rc  imppg64.rc  index.html  logging.cpp  logging.h  (+21 more)
doc/scripting/: api_reference.md  scripting.md  test1.lua
lang/de/: imppg.mo  imppg.po
lang/it/: imppg.mo  imppg.po
lang/pl/: imppg.mo  imppg.po
lang/ru/: imppg.mo  imppg.po
lang/uk/: imppg.mo  imppg.po
lang/uk/ua/: imppg.mo
packaging/: fedora-36.cmake  fedora-37.cmake  fedora-38.cmake  fedora-39.cmake  fedora-40.cmake  fedora-41.cmake  fedora-42.cmake  fedora-43.cmake  ubuntu-18.04.cmake  ubuntu-24.04.cmake  ubuntu_18.04.cmake  ubuntu_20.04.cmake  ubuntu_22.04.cmake
pl/: imppg.mo  imppg.po
scripts/docker/: build_imppg.sh  create_packages.sh  imppg-2.1.0-Fedora_41.rpm  imppg-2.1.0-Fedora_42.rpm  imppg-fedora-36.Dockerfile  imppg-fedora-37.Dockerfile  imppg-fedora-38.Dockerfile  imppg-fedora-39.Dockerfile  imppg-fedora-40.Dockerfile  imppg-fedora-41.Dockerfile  imppg-fedora-42.Dockerfile  imppg-fedora-43.Dockerfile  imppg-ubuntu-18.04.Dockerfile  imppg-ubuntu-20.04.Dockerfile  imppg-ubuntu-22.04.Dockerfile  imppg-ubuntu-24.04.Dockerfile
shaders/: copy.frag  copy_texture.vert  divide.frag  gaussian_horz.frag  gaussian_vert.frag  mono_output.frag  mono_output_cubic.frag  multiply.frag  pass-through.vert  selection_outline.frag  solid_color.frag  tone_curve.frag  unprocessed_image.frag  unsharp_mask.frag  vertex.vert
src/: TODO_scripting.md  about.cpp  adv_settings_wnd.cpp  adv_settings_wnd.h  align.h  align_disc.cpp  align_disc.h  align_params.cpp  align_phasecorr.cpp  align_phasecorr.h  align_proc.cpp  align_proc.h  align_progress.cpp  app32.manifest  app64.manifest  appconfig.cpp  appconfig.h  batch.cpp  batch.h  batch_params.cpp  batch_params.h  bmp.cpp  bmp.h  common.cpp  common.h  ctrl_ids.h  cursors.cpp  cursors.h  daction.h  fft.cpp  fft.h  formats.cpp  formats.h  gauss.cpp  gauss.h  image.cpp  image.h  imppg.rc  imppg64.rc  imppg_assert.h  (+41 more)
src/alignment/: CMakeLists.txt
src/alignment/include/: align_proc.h  exclusive_access.h
src/alignment/include/alignment/: align_proc.h
src/alignment/src/: align_common.h  align_disc.cpp  align_disc.h  align_phasecorr.cpp  align_phasecorr.h  align_proc.cpp  fft.cpp  fft.h
src/backend/: CMakeLists.txt  backend.h
src/backend/cpu_bmp/: cpu_bmp.h  cpu_bmp_core.cpp  cpu_bmp_proc.cpp  cpu_bmp_proc.h  w_lrdeconv.cpp  w_lrdeconv.h  w_tcurve.cpp  w_tcurve.h  w_unshmask.cpp  w_unshmask.h  worker.cpp  worker.h
src/backend/include/backend/: backend.h
src/backend/opengl/: gl_utils.cpp  gl_utils.h  opengl_backend.cpp  opengl_backend.h  opengl_display.cpp  opengl_display.h  opengl_proc.cpp  opengl_proc.h  uniforms.cpp  uniforms.h
src/backend/src/: gauss.cpp
src/backend/src/cpu_bmp/: cpu_bmp.h  cpu_bmp_core.cpp  cpu_bmp_proc.cpp  cpu_bmp_proc.h  lrdeconv.cpp  lrdeconv.h  message_ids.h  w_lrdeconv.cpp  w_lrdeconv.h  w_tcurve.cpp  w_tcurve.h  w_unshmask.cpp  w_unshmask.h  worker.cpp  worker.h
src/backend/src/opengl/: gl_common.h  gl_utils.cpp  gl_utils.h  opengl_display.cpp  opengl_display.h  opengl_proc.cpp  opengl_proc.h  uniforms.cpp  uniforms.h
src/common/: CMakeLists.txt
src/common/include/common/: common.h  dirs.h  formats.h  imppg_assert.h  num_formatter.h  proc_settings.h  scrolled_view.h  tcrv.h
src/common/src/: common.cpp  dirs.cpp  formats.cpp  num_formatter.cpp  proc_settings.cpp  scrolled_view.cpp  tcrv.cpp
src/common/test/: CMakeLists.txt  main.cpp  processing_settings_tests.cpp  tone_curve_tests.cpp
src/image/: CMakeLists.txt
src/image/include/image/: image.h
src/image/src/: bmp.cpp  bmp.h  image.cpp  tiff.cpp  tiff.h
src/logging/: CMakeLists.txt
src/logging/include/logging/: logging.h
src/logging/src/: logging.cpp
src/math_utils/: CMakeLists.txt
src/math_utils/include/math_utils/: convolution.h  math_utils.h
src/math_utils/src/: convolution.cpp  gauss.cpp
src/scripting/: CMakeLists.txt
src/scripting/include/scripting/: interop.h  script_exceptions.h  script_image_processor.h  script_runner.h
src/scripting/src/: script_image_processor.cpp  script_runner.cpp
src/scripting/src/interop/: interop.cpp  interop_impl.h  state.cpp  state.h
src/scripting/src/interop/classes/: DirectoryIterator.cpp  DirectoryIterator.h  DummyObject1.cpp  DummyObject1.h  DummyObject2.cpp  DummyObject2.h  ImageWrapper.cpp  ImageWrapper.h  SettingsWrapper.cpp  SettingsWrapper.h  method.h
src/scripting/src/interop/functions/: common.cpp  common.h  imppg.cpp  imppg.h  imppg_filesystem.cpp  imppg_filesystem.h  imppg_test.cpp  imppg_test.h
src/scripting/src/interop/modules/: common.cpp  common.h  imppg.cpp  imppg.h  imppg_filesystem.cpp  imppg_filesystem.h  imppg_test.cpp  imppg_test.h
src/scripting/test/: CMakeLists.txt  ScriptTestFixture.cpp  ScriptTestFixture.h  filesystem_tests.cpp  main.cpp  scripting_tests.cpp  settings_tests.cpp
tutorial/: stylesheet.css  tutorial_en.html
